# Maestro

./: .gitignore  README.md  connect_db.sh  docker_user.sh  ngrok_8000.sh  package.json  pytest.ini  run_tunnel.sh  show_directory_structure.sh  test_instagram_comments.py
apps/backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
apps/backend/contracts/: openapi.yaml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 202409120001_switch_schedule_jsonb.py  202409130001_add_insight_comments.py  202412180001_add_is_owned_by_me_to_insight_comments.py  202501050001_add_graph_rag_tables.py  202501150001_add_tracking_links.py  9b509ccc5594_update_models.py  fa9b94d59f1b_change_embedding_dimension_to_768.py  fc80822ecea3_auto_migration.py
apps/backend/src/: main.py
apps/backend/src/bff/: accounts_router.py  campaigns_router.py  drafts_router.py  me_router.py  trends_router.py
apps/backend/src/core/: celery_alerts.py  celery_app.py  celery_ctx.py  config.py  context.py  db.py  deps.py  logging.py  middleware.py  resource.py  security.py  security_schemes.py
apps/backend/src/orchestrator/: accounts_router.py  action_router.py  adapters.py  auth_router.py  bff_router.py  campaigns_router.py  cards.py  chat_router.py  dag_executor.py  dispatch.py  drafts_router.py  dsl.py  helper_router.py  insights_router.py  internal_router.py  nlp.py  persona_context.py  planner.py  registry.py  slot_mentions.py
apps/backend/src/services/: embeddings.py  (+5 more)
apps/backend/tests/: test_generate_yaml.py  test_mailbox.py  test_slack_send.py  test_trends.py
(+494 files in other folders)
